profilelist1exp/unpackaged/objects/Contract_Information__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Tag Information</relationshipLabel>
        <relationshipName>Service_Tag_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerNumber_LK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Number</label>
        <referenceTo>Customer_Number__c</referenceTo>
        <relationshipLabel>Service Tag Information</relationshipLabel>
        <relationshipName>Service_Tag_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>IF((Service_Contract_Expiration_Date__c - TODAY())&gt;0,Service_Contract_Expiration_Date__c - TODAY(),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omega_Customer_Number__c</fullName>
        <formula>CustomerNumber_LK__r.Omega_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Omega Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Tag Information</relationshipLabel>
        <relationshipName>Contract_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Expiration_Date__c</fullName>
        <label>Service Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type__c</fullName>
        <label>Service Contract Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Tag__c</fullName>
        <label>Service Tag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Service Tag Information</label>
    <nameField>
        <displayFormat>ServiceTag-{0}</displayFormat>
        <label>Contract Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Tag Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>